# playwright-python-samples

./: LICENSE  Makefile  README.md  pyproject.toml
pages/: __init__.py  base.py  dashboard.py  login.py  password_recovery.py  task_add.py  task_view.py  tasks.py
tests/: conftest.py  test_my_application.py
tests/testarena/: test_add_task.py  test_login.py  test_password_recovery.py  test_tasks.py
