[tool.poetry]
name = "playwright-python-samples"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "playwright_python_samples"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest-playwright = "^0.3.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
